--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "@vercel/analytics": "^1.6.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.29.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.12.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "typed.js": "^2.1.0"
   },
